# HRI-Final-project

./: README.md
turtlebot4_ws/src/pirate_game/: package.xml  setup.cfg  setup.py
turtlebot4_ws/src/pirate_game/pirate_game/: game_logic.py  game_state.py  island.py  movement_test.py  pirate_game.py  simple_movement.py  simple_nav_test.py  speech_controller.py  speech_test.py  tts_controller.py  tts_test.py
turtlebot_treasure_hunt/: README.md  package.xml  setup.cfg  setup.py
turtlebot_treasure_hunt/config/: game_params.yaml
turtlebot_treasure_hunt/launch/: treasure_hunt.launch.py
turtlebot_treasure_hunt/turtlebot_treasure_hunt/: __init__.py  navigation_controller.py  treasure_generator.py  treasure_hunt_game.py
